fix: rotes for notices
